unpackaged/main/default/objects/WorkOrder/fields/Diff_between_Duration_and_Est_Duration__c.field-meta.xml
<CustomField>
    <fullName>Diff_between_Duration_and_Est_Duration__c</fullName>
    <description>IF
(
OR(ISBLANK(Estimated_Duration_Amended_by_Operative__c)=TRUE,Estimated_Duration_Amended_by_Operative__c=NULL),0,(Estimated_Duration_Amended_by_Operative__c-Duration)/Duration
)</description>
    <formula>/*IF(Estimated_Duration_Amended_by_Operative__c&lt;0,1,0.1)*/



/*IF(ISBLANK(Estimated_Duration_Amended_by_Operative__c)=TRUE,1,0.1)*/

/*IF(Estimated_Duration_Amended_by_Operative__c=NULL,1,0.5)*/

IF
(
OR(ISBLANK(Estimated_Duration_Amended_by_Operative__c)=TRUE,Estimated_Duration_Amended_by_Operative__c=NULL,Estimated_Duration_Amended_by_Operative__c=0,Estimated_Duration_Amended_by_Operative__c&lt;0),0,(Estimated_Duration_Amended_by_Operative__c-Duration)/Duration
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Diff between Duration and Est Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>