unpackaged/main/default/objects/WorkOrder/fields/Discount_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Discount_Engineer__c</fullName>
    <description>The % discount given by the Engineer (if applicable)</description>
    <formula>Costs_and_Charges__r.Discount_Engineer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The % discount given by the Engineer (if applicable)</inlineHelpText>
    <label>Discount Engineer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>