unpackaged/main/default/objects/WorkOrder/fields/Does_Valid_Auth_Record_Exist_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Does_Valid_Auth_Record_Exist_on_Job__c</fullName>
    <description>Is there an In Force Authorisation record on the Job record?</description>
    <formula>IF
(
AND
(
Job__r.Authorisation__r.asp04__Expiry_Date__c&gt;= TODAY(),

TEXT(Job__r.Authorisation__r.asp04__Status__c)=&#39;In Force&#39;
)
,TRUE,FALSE
)</formula>
    <inlineHelpText>Is there an In Force Authorisation record on the Job record?</inlineHelpText>
    <label>Does Valid Auth Record Exist on Job?</label>
    <type>Checkbox</type>
</CustomField>