unpackaged/main/default/objects/WorkOrder/fields/Estimate_Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Preferred_Date__c</fullName>
    <formula>Job__r.Estimate_Preferred_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Preferred Date</label>
    <type>Text</type>
</CustomField>