unpackaged/main/default/objects/WorkOrder/fields/Estimate_Preferred_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Preferred_Time__c</fullName>
    <formula>Job__r.Estimate_Preferred_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Preferred Time</label>
    <type>Text</type>
</CustomField>