unpackaged/main/default/objects/WorkOrder/fields/Estimated_Duration_Amended_by_Operative__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_Amended_by_Operative__c</fullName>
    <description>The Amended Estimated Duration figure entered by the Operative (will be same as Work Type Duration if not amended)</description>
    <inlineHelpText>The Amended Estimated Duration figure entered by the Operative (will be same as Work Type Duration if not amended)</inlineHelpText>
    <label>Estimated Duration Amended by Operative</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>