unpackaged/main/default/objects/WorkOrder/fields/Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notes__c</fullName>
    <label>Feedback Notes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting client date confirmation</fullName>
            </value>
            <value>
                <fullName>Awaiting info engineer</fullName>
            </value>
            <value>
                <fullName>Awaiting parts client</fullName>
            </value>
            <value>
                <fullName>Awaiting parts supplier</fullName>
            </value>
            <value>
                <fullName>Works not going ahead</fullName>
            </value>
            <value>
                <fullName>Awaiting scaffolding permits</fullName>
            </value>
            <value>
                <fullName>Scaffolding only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>