unpackaged/main/default/objects/WorkOrder/fields/Fixed_Price_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Admin_Fee__c</fullName>
    <formula>IF
( Record_Type_Name__c =&#39;Fixed Price&#39;,  ( (Charge_Labour__c+ Charge_List_Price_Services__c + Call_Out_Fee__c + Charge_ULEZ__c + Charge_Collection_Fee__c + Charge_Materials__c )- Discount_Value__c )*0.10,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Price Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>