unpackaged/main/default/objects/WorkOrder/fields/Go_Ahead__c.field-meta.xml
<CustomField>
    <fullName>Go_Ahead__c</fullName>
    <description>Does the Customer wish to proceed with this booking?</description>
    <inlineHelpText>Does the Customer wish to proceed with this booking?</inlineHelpText>
    <label>Go Ahead?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>