unpackaged/main/default/objects/WorkOrder/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>TEXT(WorkType.Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>