unpackaged/main/default/objects/WorkOrder/fields/H_S_Form_Result__c.field-meta.xml
<CustomField>
    <fullName>H_S_Form_Result__c</fullName>
    <description>Displays whether the related H&amp;S form has passed or failed.</description>
    <label>H&amp;S Form Result</label>
    <length>6</length>
    <type>Text</type>
</CustomField>