unpackaged/main/default/objects/WorkOrder/fields/Hourly_Charge_R1__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Charge_R1__c</fullName>
    <formula>Costs_and_Charges__r.Hourly_Charge_R1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Charge R1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>