unpackaged/main/default/objects/WorkOrder/fields/Include_in_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Estimate__c</fullName>
    <formula>Costs_and_Charges__r.Include_in_estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Estimate</label>
    <type>Checkbox</type>
</CustomField>