unpackaged/main/default/objects/WorkOrder/fields/Is_Franchisee_Work__c.field-meta.xml
<CustomField>
    <fullName>Is_Franchisee_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used for the visibility of Franchise Users</description>
    <label>Is Franchisee Work?</label>
    <type>Checkbox</type>
</CustomField>