unpackaged/main/default/objects/WorkOrder/fields/Is_Further_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Further_Work_Required__c</fullName>
    <description>To signify if, after the initial visit, whether further work is required at the property/site.</description>
    <inlineHelpText>To signify if, after the initial visit, whether further work is required at the property/site.</inlineHelpText>
    <label>Is Further Work Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>