unpackaged/main/default/objects/WorkOrder/fields/Is_On_site_Conversion_WO__c.field-meta.xml
<CustomField>
    <fullName>Is_On_site_Conversion_WO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be ticked is this Work Order has been created via the On site conversion process to distinguish it from other Fixed Price Work Orders created by the Engineer.</description>
    <inlineHelpText>Will be ticked is this Work Order has been created via the On site conversion process by the Engineer.</inlineHelpText>
    <label>Is On site Conversion WO?</label>
    <type>Checkbox</type>
</CustomField>