unpackaged/main/default/objects/WorkOrder/fields/Is_this_a_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Call_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Work Order a Call Back? - if Yes this box should be ticked</description>
    <inlineHelpText>Is this Work Order a Call Back? - if Yes this box should be ticked</inlineHelpText>
    <label>Is this a Call Back?</label>
    <type>Checkbox</type>
</CustomField>