unpackaged/main/default/objects/WorkOrder/fields/Is_this_the_last_Not_Complete_WO_for_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_this_the_last_Not_Complete_WO_for_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this the last Not Complete WO for Job</label>
    <type>Checkbox</type>
</CustomField>