unpackaged/main/default/objects/WorkOrder/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <description>The &#39;Job Status&#39; of the Job record</description>
    <formula>TEXT(Job__r.Status__c)</formula>
    <inlineHelpText>The &#39;Job Status&#39; of the Job record</inlineHelpText>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>