unpackaged/main/default/objects/WorkOrder/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <label>Lead Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Golden</fullName>
            </value>
            <value>
                <fullName>New Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>