unpackaged/main/default/objects/WorkOrder/fields/Linked_Reactive_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Linked_Reactive_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For On Site conversion, a Fixed Cost Work Order can be created during a Reactive job</description>
    <label>Linked Reactive Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders (Linked Fixed Work Order)</relationshipLabel>
    <relationshipName>Work_Orders_Reactive</relationshipName>
    <type>Lookup</type>
</CustomField>