unpackaged/main/default/objects/WorkOrder/fields/Linked_Work_Order_Total_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Linked_Work_Order_Total_Excl_VAT__c</fullName>
    <description>Linked Reactive Work Order Total Excluding VAT</description>
    <label>Linked Work Order Total (Excl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>