unpackaged/main/default/objects/WorkOrder/fields/List_Price_at_point_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>List_Price_at_point_of_Booking__c</fullName>
    <description>To record the value of List Prices Services entered at the point of booking - at this could change by the time the work is completed.</description>
    <inlineHelpText>To record the value of List Prices Services entered at the point of booking - at this could change by the time the work is completed.</inlineHelpText>
    <label>List Price at point of Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>