unpackaged/main/default/objects/WorkOrder/fields/Materials_Approved_by_Office__c.field-meta.xml
<CustomField>
    <fullName>Materials_Approved_by_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materials Approved by Office</label>
    <type>Checkbox</type>
</CustomField>