unpackaged/main/default/objects/WorkOrder/fields/Next_Steps_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_to_Proceed__c</fullName>
    <label>Next Steps to Proceed</label>
    <type>TextArea</type>
</CustomField>