unpackaged/main/default/objects/WorkOrder/fields/Number_of_Franchisee_Child_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Franchisee_Child_Work_Orders__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This will be read only and be used as part of a Roll up.</description>
    <label>Number of Franchisee Child Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>