unpackaged/main/default/objects/WorkOrder/fields/Number_of_WOLI_Complete__c.field-meta.xml
<CustomField>
    <fullName>Number_of_WOLI_Complete__c</fullName>
    <label>Number of WOLI Complete</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>