unpackaged/main/default/objects/WorkOrder/fields/Number_of_WOLI_Complete_or_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_WOLI_Complete_or_Not_Needed__c</fullName>
    <formula>Number_of_WOLI_Complete__c  +  Number_of_WOLI_Not_Needed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of WOLI Complete or Not Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>