unpackaged/main/default/objects/WorkOrder/fields/Number_of_WOLI_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_WOLI_Not_Needed__c</fullName>
    <label>Number of WOLI Not Needed</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Needed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>