unpackaged/main/default/objects/WorkOrder/fields/Off_Site_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Off_Site_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Off Site Agreement</label>
    <referenceTo>Off_site_agreement__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>