unpackaged/main/default/objects/WorkOrder/fields/On_site_agreement__c.field-meta.xml
<CustomField>
    <fullName>On_site_agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On-site agreement</label>
    <referenceTo>On_site_agreement__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>