unpackaged/main/default/objects/WorkOrder/fields/On_Site_Agreement_Timeslot__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Agreement_Timeslot__c</fullName>
    <label>On Site Agreement Timeslot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>