unpackaged/main/default/objects/WorkOrder/fields/On_Site_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Start_Time__c</fullName>
    <label>On Site Start Time</label>
    <type>DateTime</type>
</CustomField>