unpackaged/main/default/objects/WorkOrder/fields/Online_Booking__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Booking</label>
    <referenceTo>Online_Bookings__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>