unpackaged/main/default/objects/WorkOrder/fields/ONSA_RequiredFieldsToCreate_SA_Completed__c.field-meta.xml
<CustomField>
    <fullName>ONSA_RequiredFieldsToCreate_SA_Completed__c</fullName>
    <formula>On_site_agreement__r.Required_Fields_to_Create_SA_Completed__c</formula>
    <label>ONSA-RequiredFieldsToCreate SA Completed</label>
    <type>Checkbox</type>
</CustomField>