unpackaged/main/default/objects/WorkOrder/fields/ONSA_Status__c.field-meta.xml
<CustomField>
    <fullName>ONSA_Status__c</fullName>
    <description>Status of the On-Site Agreement</description>
    <formula>TEXT(On_site_agreement__r.Status__c)</formula>
    <inlineHelpText>Status of the On-Site Agreement</inlineHelpText>
    <label>ONSA - Status</label>
    <type>Text</type>
</CustomField>