unpackaged/main/default/objects/WorkOrder/fields/OP_App_Booking_selection__c.field-meta.xml
<CustomField>
    <fullName>OP_App_Booking_selection__c</fullName>
    <label>OP App Booking selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>