unpackaged/main/default/objects/WorkOrder/fields/OSA_RequiredFieldsToCreate_SA_Completed__c.field-meta.xml
<CustomField>
    <fullName>OSA_RequiredFieldsToCreate_SA_Completed__c</fullName>
    <formula>Off_Site_Agreement__r.Required_Fields_to_Create_SA_Completed__c</formula>
    <label>OSA-RequiredFieldsToCreate SA Completed</label>
    <type>Checkbox</type>
</CustomField>