unpackaged/main/default/objects/WorkOrder/fields/OSA_Status__c.field-meta.xml
<CustomField>
    <fullName>OSA_Status__c</fullName>
    <description>The Status of the associated Off Site Agreement record (if it has one)</description>
    <formula>TEXT(Off_Site_Agreement__r.Status__c)</formula>
    <inlineHelpText>The Status of the associated Off Site Agreement record (if it has one)</inlineHelpText>
    <label>OSA - Status</label>
    <type>Text</type>
</CustomField>