unpackaged/main/default/objects/WorkOrder/fields/Other_Charges_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Description__c</fullName>
    <label>Other Charges Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>