unpackaged/main/default/objects/WorkOrder/fields/Payment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Payment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Approved</label>
    <type>Checkbox</type>
</CustomField>