unpackaged/main/default/objects/WorkOrder/fields/Payment_Notes_from_Operative__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes_from_Operative__c</fullName>
    <description>E.g. to record if an Operative said they received payment via Chq/Cash, did they confirm that they received this chq or cash?</description>
    <inlineHelpText>E.g. to record if an Operative said they received payment via Chq/Cash, did they confirm that they received this chq or cash?</inlineHelpText>
    <label>Payment Notes from Operative</label>
    <type>TextArea</type>
</CustomField>