unpackaged/main/default/objects/WorkOrder/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>What si the Payment status of the Work Order? - Paid or Outstanding</description>
    <inlineHelpText>What si the Payment status of the Work Order? - Paid or Outstanding</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>