unpackaged/main/default/objects/WorkOrder/fields/PM_pay__c.field-meta.xml
<CustomField>
    <fullName>PM_pay__c</fullName>
    <description>Project Manager pay at the completion of the project.</description>
    <inlineHelpText>Project Manager pay at the completion of the project.</inlineHelpText>
    <label>PM pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>