unpackaged/main/default/objects/WorkOrder/fields/PO_Number_for_Key_Accounts__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_for_Key_Accounts__c</fullName>
    <label>Client PO Number</label>
    <length>48</length>
    <type>Text</type>
</CustomField>