unpackaged/main/default/objects/WorkOrder/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>This will only display the first part of the postcode (Only for Data Visualisation for SysAdmin)</description>
    <formula>LEFT( PostalCode , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>