unpackaged/main/default/objects/WorkOrder/fields/Preferred_Arrival_Window__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Arrival_Window__c</fullName>
    <label>Preferred Arrival Window</label>
    <length>255</length>
    <type>Text</type>
</CustomField>