unpackaged/main/default/objects/WorkOrder/fields/Raised_from_Root_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Raised_from_Root_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised from Root Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders (Raised from Root Work Order)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>