unpackaged/main/default/objects/WorkOrder/fields/Raised_from_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Raised_from_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Fixed Price Work Orders created from  (most likely) a Reactive Work Order - so this fields contains the original Work Order, therefore for a Reactive Work Order this field should be blank.</description>
    <inlineHelpText>The original Reactive Work Order this Fixed Price Work Order was created from by the Engineer</inlineHelpText>
    <label>Raised from Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders (Raised from Work Order)</relationshipLabel>
    <relationshipName>Fixed_Price_Work_Orders_raised_from_this</relationshipName>
    <type>Lookup</type>
</CustomField>