unpackaged/main/default/objects/WorkOrder/fields/rate_card_id__c.field-meta.xml
<CustomField>
    <fullName>rate_card_id__c</fullName>
    <label>rate card id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>