unpackaged/main/default/objects/WorkOrder/fields/Rate_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Pay__c</fullName>
    <description>Deletion Candidate</description>
    <label>Rate of Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>