unpackaged/main/default/objects/WorkOrder/fields/Rate_Of_Pay_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rate_Of_Pay_Percent__c</fullName>
    <label>Rate Of Pay %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>