unpackaged/main/default/objects/WorkOrder/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>If the Work Order was created by an Operative on site and the Customer rejected it - what was the reason?</description>
    <inlineHelpText>If the Work Order was created by an Operative on site and the Customer rejected it - what was the reason?</inlineHelpText>
    <label>Reason for Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>