unpackaged/main/default/objects/WorkOrder/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF( LEN( PostalCode ) = 8,  LEFT(PostalCode , 2) , 

IF( LEN( PostalCode ) = 7,  LEFT(PostalCode , 2), 

IF( LEN( PostalCode ) = 6,  LEFT(PostalCode , 1),&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>