unpackaged/main/default/objects/WorkOrder/fields/Region_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Area_Code__c</fullName>
    <description>This shows which Region Area that the Work Order belongs to</description>
    <formula>Site__r.Region_Area_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Area Code</label>
    <type>Text</type>
</CustomField>