unpackaged/main/default/objects/WorkOrder/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>