unpackaged/main/default/objects/WorkOrder/fields/Require_Electrical_Cert__c.field-meta.xml
<CustomField>
    <fullName>Require_Electrical_Cert__c</fullName>
    <description>If the Work Type Requires an Electrical Certification this will EQUAL True</description>
    <formula>WorkType.Require_Electrical_Certification__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Require Electrical Cert</label>
    <type>Checkbox</type>
</CustomField>