unpackaged/main/default/objects/WorkOrder/fields/Requisition_Labour__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Labour__c</fullName>
    <label>Requisition Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>