unpackaged/main/default/objects/WorkOrder/fields/Requisition_Materials__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Materials__c</fullName>
    <label>Requisition Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>