unpackaged/main/default/objects/WorkOrder/fields/Requisition_Other__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Other__c</fullName>
    <label>Requisition Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>