unpackaged/main/default/objects/WorkOrder/fields/Requisition_Total__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Total__c</fullName>
    <label>Requisition Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>