unpackaged/main/default/objects/WorkOrder/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <description>Reason given by the Customer for Rescheduling Reason</description>
    <label>Reschedule Reason</label>
    <type>TextArea</type>
</CustomField>