unpackaged/main/default/objects/WorkOrder/fields/Reschedule_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Time_Stamp__c</fullName>
    <description>Automatically Populated when a Community user runs through the rescheduling process</description>
    <label>Reschedule Time Stamp</label>
    <type>DateTime</type>
</CustomField>