unpackaged/main/default/objects/WorkOrder/fields/Resource_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Resource_Preferences__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Resource Preferences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>