unpackaged/main/default/objects/WorkOrder/fields/Schedule_Slot_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Slot_End__c</fullName>
    <formula>IF(
  OR(
DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp; Arrival_Window_End_TEXT__c ) &lt;
DATETIMEVALUE(DATE(YEAR(DATEVALUE(DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp; Arrival_Window_End_TEXT__c ) )),3,31)-(WEEKDAY(DATE(YEAR(DATEVALUE( DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp; Arrival_Window_End_TEXT__c ))),3,31))-1) +1/24),
DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp; Arrival_Window_End_TEXT__c ) &gt; DATETIMEVALUE(DATE(YEAR(DATEVALUE(
DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp; Arrival_Window_End_TEXT__c ))),10,31)- (WEEKDAY(DATE(YEAR(DATEVALUE(
DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp; Arrival_Window_End_TEXT__c))),10,31))-1)+1/24)

 

 

),
DATETIMEVALUE(Requested_Date__c)
+
( MFLOOR((Duration/8))*16)/24
+
 IF(Arrival_Window_End__c &lt; Arrival_Window_Start__c , 1, 0) 
+
(HOUR( Arrival_Window_End__c )*60)/1440
+
(MINUTE( Arrival_Window_End__c ))/1440
+ (60*Duration)/1440,

DATETIMEVALUE(Requested_Date__c)
+
( MFLOOR((Duration/8))*16)/24
+
 IF(Arrival_Window_End__c &lt; Arrival_Window_Start__c , 1, 0) 
+
(HOUR( Arrival_Window_End__c )*60)/1440
+
(MINUTE( Arrival_Window_End__c ))/1440
+ (60*Duration)/1440 -1/24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest End Permitted</label>
    <type>DateTime</type>
</CustomField>