unpackaged/main/default/objects/WorkOrder/fields/Schedule_Slot_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Slot_Start__c</fullName>
    <description>DATETIMEVALUE(  
Requested_Date__c   
)- 60/1440

 +

 (HOUR( Arrival_Window_Start__c )*60)/1440

+
 (MINUTE( Arrival_Window_Start__c ))/1440</description>
    <formula>IF( 
    OR(
        DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ) &lt; 
		DATETIMEVALUE(DATE(YEAR(DATEVALUE(DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ) )),3,31)-(WEEKDAY(DATE(YEAR(DATEVALUE( DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ))),3,31))-1) +1/24),
        DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ) &gt; DATETIMEVALUE(DATE(YEAR(DATEVALUE( 
		DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ))),10,31)- (WEEKDAY(DATE(YEAR(DATEVALUE( 
		DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c))),10,31))-1)+1/24)

 

    ),
    DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ),
    DATETIMEVALUE(TEXT(Requested_Date__c)&amp; &quot; &quot; &amp;  Arrival_Window_Start_TEXT__c ) -1/24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Start Permitted</label>
    <type>DateTime</type>
</CustomField>